# terrain_toolkit

./: .gitignore  README.md  benchmark.py  example.py  mkdocs.yml  pyproject.toml  test_livox.py  test_ouster.py  test_synthetic.py
.claude/projects/-home-kuceral4-projects-elevation-mapping/memory/: MEMORY.md  feedback_no_coauthor.md
ros/: dev-shell.sh  inspect_cloud.py  terrain-demo.tmuxinator.yml
ros/terrain_toolkit_ros/: README.md  package.xml  setup.cfg  setup.py
ros/terrain_toolkit_ros/launch/: livox.launch.py  ouster.launch.py  terrain_toolkit_node.launch.py
ros/terrain_toolkit_ros/rviz/: terrain_demo.rviz
ros/terrain_toolkit_ros/terrain_toolkit_ros/: terrain_toolkit_node.py
src/elevation_mapping/: __init__.py  height_map_builder.py  postprocess.py
src/terrain_toolkit/: pipeline.py
src/terrain_toolkit/heightmap/: postprocess.py
